--- a/utils-android/build.gradle
+++ b/utils-android/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'androidx.viewpager:viewpager:1.0.0'
 }
