--- a/utils-android/build.gradle
+++ b/utils-android/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation "com.apollographql.apollo:apollo-android-support:$apollo_version"
     implementation "com.apollographql.apollo:apollo-coroutines-support:$apollo_version"
     implementation "com.apollographql.apollo:apollo-rx2-support:$apollo_version"
+    implementation 'net.zetetic:android-database-sqlcipher:4.2.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'androidx.viewpager:viewpager:1.0.0'
